--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -11,10 +11,15 @@
     <h2 style="color:red">Describe in your own words how you displayed the map in different projections using QGIS</h2>
     <p>You can write a paragraph here</p>
     
-    <h2>WGS84 Projection</h2>
+    <h2>WGS84 Projection A</h2>
     <h3>Some observations</h3>
     <a href=".//maps/4326.png">
     <img src=".//maps/4326.png" alt="WGS84" width='500px'>
+    </a>
+    <h2>WGS84 Projection B</h2>
+    <h3>Some observations</h3>
+    <a href="./maps/Pseudo Mercator HW2.png">
+    <img src="./maps/Pseudo Mercator HW2.png" alt="WGS84 EPSG 3857" width='500px'>
     </a>
     <h2>Aitoff Projection</h2>
     <h3>Some observations</h3>
