--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -36,6 +36,11 @@
     <a href="./maps/SphereWinkelI.png">
     <img src="./maps/SphereWinkelI.png" alt="Sphere Winkel I" width='500px'>
     </a>
+    <h2>World Cylindrical Equal Area</h2>
+    <h3>Some observations</h3>
+    <a href="./maps/WorldCylindricalEqualArea.png">
+    <img src="./maps/WorldCylindricalEqualArea.png" alt="World Cylindrical Equal Area" width='500px'>
+    </a>
     <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
     <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
     <p></p>
