World Equidistant Conic

--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -41,6 +41,11 @@
     <a href="./maps/WorldCylindricalEqualArea.png">
     <img src="./maps/WorldCylindricalEqualArea.png" alt="World Cylindrical Equal Area" width='500px'>
     </a>
+    <h2>World Equidistant Conic</h2>
+    <h3>Some observations</h3>
+    <a href="./maps/World Equidistant ConicHW2.png">
+    <img src="./maps/World Equidistant ConicHW2.png" alt="World Cylindrical Equal Area" width='500px'>
+    </a>
     <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
     <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
     <p></p>
