North Pole Azimuthal Equidistant

--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -44,7 +44,12 @@
     <h2>World Equidistant Conic</h2>
     <h3>Some observations</h3>
     <a href="./maps/World Equidistant ConicHW2.png">
-    <img src="./maps/World Equidistant ConicHW2.png" alt="World Cylindrical Equal Area" width='500px'>
+    <img src="./maps/World Equidistant ConicHW2.png" alt="World Equidistant Conic" width='500px'>
+    </a>
+    <h2>North Pole Azimuthal Equidistant</h2>
+    <h3>Some observations</h3>
+    <a href="./maps/North Pole Azimuthal Equidistant.png">
+    <img src="./maps/North Pole Azimuthal Equidistant.png" alt="North Pole Azimuthal Equidistant" width='500px'>
     </a>
     <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
     <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
