--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -56,6 +56,11 @@
     <a href="./maps/TheWorldFromSpace.png">
     <img src="./maps/TheWorldFromSpace.png" alt="The World From Space" width='500px'>
     </a>
+    <h2>World Robinson</h2>
+    <h3>Some observations</h3>
+    <a href="./maps/RobinsonHW2.png">
+    <img src="./maps/RobinsonHW2.png" alt="World Robinson" width='500px'>
+    </a>
     <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
     <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
     <p></p>
