--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -12,7 +12,7 @@
     <p>You can write a paragraph here</p>
     
     <h2>WGS84 Projection A</h2>
-    <h3>Some observations</h3>
+    <h3>some observations</h3>
     <a href=".//maps/4326.png">
     <img src=".//maps/4326.png" alt="WGS84" width='500px'>
     </a>
@@ -26,33 +26,28 @@
     <a href=".//maps/54043.png">
     <img src=".//maps/54043.png" alt="Aitoff" width='500px'>
     </a>
-    <h2>Aitoff Projection</h2>
-    <h3>Some observations</h3>
-    <a href=".//maps/54043.png">
-    <img src=".//maps/54043.png" alt="Aitoff" width='500px'>
-    </a>
     <h2>Sphere Winkel I</h2>
     <h3>Some observations</h3>
     <a href="./maps/SphereWinkelI.png">
     <img src="./maps/SphereWinkelI.png" alt="Sphere Winkel I" width='500px'>
     </a>
     <h2>World Cylindrical Equal Area</h2>
-    <h3>Some observations</h3>
+    <h3>This projection preserves area while distorting shape and angles. For example, although the size of Greenland is now accurately 1/14 the size of Africa, it is vertically compressed and horizonatally stretched to fit onto a continuous 2D surface. A map that preserves area could be useful in measurements of deforestations, which use units of area.</h3>
     <a href="./maps/WorldCylindricalEqualArea.png">
     <img src="./maps/WorldCylindricalEqualArea.png" alt="World Cylindrical Equal Area" width='500px'>
     </a>
     <h2>World Equidistant Conic</h2>
-    <h3>Some observations</h3>
+    <h3>This projection preserves distance along meridians, while distorting area, directions, and angles. This map would be best for land that is east-west oriented and is at mid-latitudes.</h3>
     <a href="./maps/World Equidistant ConicHW2.png">
     <img src="./maps/World Equidistant ConicHW2.png" alt="World Equidistant Conic" width='500px'>
     </a>
     <h2>North Pole Azimuthal Equidistant</h2>
-    <h3>Some observations</h3>
+    <h3>This projections preserves distacnce and direction. </h3>
     <a href="./maps/North Pole Azimuthal Equidistant.png">
     <img src="./maps/North Pole Azimuthal Equidistant.png" alt="North Pole Azimuthal Equidistant" width='500px'>
     </a>
     <h2>The World From Space</h2>
-    <h3>Some observations</h3>
+    <h3>This orthographic map is used by Google Earth. It appears as though it is a picture of the Earth from space.</h3>
     <a href="./maps/TheWorldFromSpace.png">
     <img src="./maps/TheWorldFromSpace.png" alt="The World From Space" width='500px'>
     </a>
