--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -42,7 +42,7 @@
     <img src="./maps/World Equidistant ConicHW2.png" alt="World Equidistant Conic" width='500px'>
     </a>
     <h2>North Pole Azimuthal Equidistant</h2>
-    <h3>This projections preserves distacnce and direction. </h3>
+    <h3>This projection preserves distance and direction, while distorting area and angles. Since distance is preserved, this projection may be useful for showing relative length of different flights. However, distance is only preserved to and from the center of the map. Distances from any two points outside of the center are distorted.</h3>
     <a href="./maps/North Pole Azimuthal Equidistant.png">
     <img src="./maps/North Pole Azimuthal Equidistant.png" alt="North Pole Azimuthal Equidistant" width='500px'>
     </a>
@@ -52,14 +52,14 @@
     <img src="./maps/TheWorldFromSpace.png" alt="The World From Space" width='500px'>
     </a>
     <h2>World Robinson</h2>
-    <h3>Some observations</h3>
+    <h3>This is a compromise projection. Area, distance, and direction are all distorted. However, each distortion is very limited over most of the map. Distortion occurs most around the poles and edges. It is considers visually-appealing by many. It is suited for general purposes, like perhaps teaching some historical events, when exact details are not necessary.</h3>
     <a href="./maps/RobinsonHW2.png">
     <img src="./maps/RobinsonHW2.png" alt="World Robinson" width='500px'>
     </a>
-    <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
-    <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
-    <p></p>
-    <h2>Data used for this project</h2>
-    <a href="https://www.naturalearthdata.com/http//www.naturalearthdata.com/download/10m/cultural/ne_10m_admin_0_countries.zip"> Download Natrual Earth 1:10m Cultural Vector </a>
+    <!-- <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2> -->
+    <!-- <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3> -->
+    <!-- <p></p> -->
+    <!-- <h2>Data used for this project</h2> -->
+    <!-- <a href="https://www.naturalearthdata.com/http//www.naturalearthdata.com/download/10m/cultural/ne_10m_admin_0_countries.zip"> Download Natrual Earth 1:10m Cultural Vector </a> -->
 </body>
 </html>
