--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -11,23 +11,23 @@
     <h2 style="color:red">Describe in your own words how you displayed the map in different projections using QGIS</h2>
     <p>You can write a paragraph here</p>
     
-    <h2>WGS84 Projection A</h2>
-    <h3>some observations</h3>
+    <h2>WGS84 Projection</h2>
+    <h3>This projection preserves shapes and angles, while noticeably distorting area. This makes it best used for small areas. This projection is standard for GPS since accurate angles and directon are important for navigational purposes.</h3>
     <a href=".//maps/4326.png">
     <img src=".//maps/4326.png" alt="WGS84" width='500px'>
     </a>
-    <h2>WGS84 Projection B</h2>
-    <h3>Some observations</h3>
+    <h2>Pseudo-Mercator</h2>
+    <h3>This projection prokects the WGS84 coordinate system onto a square. It is useful for visualization on computers, but not suited for storing data.</h3>
     <a href="./maps/Pseudo Mercator HW2.png">
     <img src="./maps/Pseudo Mercator HW2.png" alt="WGS84 EPSG 3857" width='500px'>
     </a>
     <h2>Aitoff Projection</h2>
-    <h3>Some observations</h3>
+    <h3>This projection is best for small-scale maps, since shape, area, distance, and direction are all somewhat distorted. This projection is scaled accurately only along the Prime Meridian and the Equator.</h3>
     <a href=".//maps/54043.png">
     <img src=".//maps/54043.png" alt="Aitoff" width='500px'>
     </a>
     <h2>Sphere Winkel I</h2>
-    <h3>Some observations</h3>
+    <h3>This is a compromise projection. Area, direction, and shape are each somewhat distorted. It is suited only for coordinates that reference a sphere.</h3>
     <a href="./maps/SphereWinkelI.png">
     <img src="./maps/SphereWinkelI.png" alt="Sphere Winkel I" width='500px'>
     </a>
