--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -12,22 +12,22 @@
     <p>You can write a paragraph here</p>
     
     <h2>WGS84 Projection</h2>
-    <h3>This projection preserves shapes and angles, while noticeably distorting area. This makes it best used for small areas. This projection is standard for GPS since accurate angles and directon are important for navigational purposes.</h3>
-    <a href=".//maps/4326.png">
-    <img src=".//maps/4326.png" alt="WGS84" width='500px'>
+    <h3>This projection preserves shapes and angles, while noticeably distorting area. This makes it best-used for small areas. This projection is standard for GPS, since accurate angles and directon are important for navigational purposes.</h3>
+    <a href="./maps/WGS84.1.png">
+    <img src="./maps/WGS84.1.png" alt="WGS84" width='500px'>
     </a>
     <h2>Pseudo-Mercator</h2>
-    <h3>This projection prokects the WGS84 coordinate system onto a square. It is useful for visualization on computers, but not suited for storing data.</h3>
+    <h3>This map projects the WGS84 coordinate system onto a square. It is useful for visualization on computers, but not suited for storing data.</h3>
     <a href="./maps/Pseudo Mercator HW2.png">
     <img src="./maps/Pseudo Mercator HW2.png" alt="WGS84 EPSG 3857" width='500px'>
     </a>
     <h2>Aitoff Projection</h2>
     <h3>This projection is best for small-scale maps, since shape, area, distance, and direction are all somewhat distorted. This projection is scaled accurately only along the Prime Meridian and the Equator.</h3>
-    <a href=".//maps/54043.png">
-    <img src=".//maps/54043.png" alt="Aitoff" width='500px'>
+    <a href="./maps/Aitoff.png">
+    <img src="./maps/Aitoff.png" alt="Aitoff" width='500px'>
     </a>
     <h2>Sphere Winkel I</h2>
-    <h3>This is a compromise projection. Area, direction, and shape are each somewhat distorted. It is suited only for coordinates that reference a sphere.</h3>
+    <h3>This is a compromise projection. Area, direction, and shape are each somewhat distorted. It is suited only for coordinates that reference a sphere. It could be suited for general purposes, when none of these exact details are necessary.</h3>
     <a href="./maps/SphereWinkelI.png">
     <img src="./maps/SphereWinkelI.png" alt="Sphere Winkel I" width='500px'>
     </a>
@@ -42,12 +42,12 @@
     <img src="./maps/World Equidistant ConicHW2.png" alt="World Equidistant Conic" width='500px'>
     </a>
     <h2>North Pole Azimuthal Equidistant</h2>
-    <h3>This projection preserves distance and direction, while distorting area and angles. Since distance is preserved, this projection may be useful for showing relative length of different flights. However, distance is only preserved to and from the center of the map. Distances from any two points outside of the center are distorted.</h3>
+    <h3>This projection preserves distance and direction, while distorting area and angles. Since distance is preserved, this projection may be useful for showing the relative length of different flights. However, distance is only preserved to and from the center of the map. Distances from any two points outside of the center are distorted.</h3>
     <a href="./maps/North Pole Azimuthal Equidistant.png">
     <img src="./maps/North Pole Azimuthal Equidistant.png" alt="North Pole Azimuthal Equidistant" width='500px'>
     </a>
     <h2>The World From Space</h2>
-    <h3>This orthographic map is used by Google Earth. It appears as though it is a picture of the Earth from space.</h3>
+    <h3>This orthographic map is used by Google Earth. It almost appears as though it is a picture of the Earth from space.</h3>
     <a href="./maps/TheWorldFromSpace.png">
     <img src="./maps/TheWorldFromSpace.png" alt="The World From Space" width='500px'>
     </a>
