--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>GEOG 370 Projects</h1>
     <A href="./Worldprojections/worldprojections.html">World Projections</A>
+    <A href="./Georefunc/rectifiedtilelayer.html">UNC Rectified Tile Layer</A>
 </body>
 </html>
