--- a/Georefunc/GCPpointshw3.html
+++ b/Georefunc/GCPpointshw3.html
@@ -6,10 +6,16 @@
     <title>GCP Points</title>
 </head>
 <body>
-    <h1>In this project I learned how to display images in different projections</h1>
+    <h1>The following are my ground control points for the georeferenced tile layer I created.</h1>
     
     <!-- <h2 style="color:red">Describe in your own words how you displayed the map in different projections using QGIS</h2> -->
-    <p>     Building on the lessons from Section I, in which we created maps and downloaded them as images, I used various Coordinate Reference System projections along with the Indicatrix plug-in to show the distortions of each projection. Initially I downloaded the data from the class website in organized folders. Then I made sure the Indicatrix plug-in was active in QGIS. After changing the colors in the map, I created a print layout for each projection and downloaded them as images (.png files). These images are displayed on this webpage which was coded in Visual Code Studio and transformed into a website through GitHub. I created the repository by accessing GitHub on the internet, and updated the webpage through the GitHub desktop application. This page is a "master branch" that I can commit code to in my "GEOG370_Spring2021" Repository and push to the origin, which allows anyone to view the webpage.</p>
+    <p>mapX,mapY,pixelX,pixelY,enable,dX,dY,residual
+        1987252.70738575677387416,782171.48229367076419294,1309.44736842105271535,-1807.15789473684208133,1,5.0219066150400522,2.05931916730469311,5.42773815534717308
+        1986812.45010138372890651,784664.84720002370886505,1495.66447368421086139,-1073.7302631578945693,1,0.6472188989746428,-4.39286850539292573,4.44029120766454088
+        1985612.10172352124936879,782651.14394978515338153,911.21052631578959335,-1472.21052631578959335,1,4.95655715146961029,-3.77432286468297207,6.23000576907062076
+        1986097.14348759525455534,784143.03733897872734815,1227.65789473684276345,-1113.89473684210520332,1,5.74418028548825532,7.30003258296665081,9.28903024349510176
+        1987206.12871541013009846,783676.93671576783526689,1487.63157894736878006,-1391.39473684210520332,1,-2.31511756984878048,-0.94241879901869652,2.49958447646131088
+        1986189.24942748108878732,783013.25399570597801358,1135.15789473684253608,-1443,1,-14.05474538112298433,-0.24974158117674961,14.05696406005103682</p>
     
     <h2>WGS84 Projection</h2>
     <h3>This projection preserves shapes and angles, while noticeably distorting area. This makes it best-used for small areas. This projection is standard for GPS, since accurate angles and directon are important for navigational purposes.</h3>
