--- a/Georefunc/GCPpointshw3.html
+++ b/Georefunc/GCPpointshw3.html
@@ -9,6 +9,7 @@
     <h1>The following are my ground control points for the georeferenced tile layer I created.</h1>
     
     <!-- <h2 style="color:red">Describe in your own words how you displayed the map in different projections using QGIS</h2> -->
+    <p>The data is displayed in the following format:</p>
     <p>mapX,mapY,pixelX,</p>
     <p>pixelY,enable,dX,dY,residual</p>
     <h2>Point 1: 1987252.70738575677387416,      782171.48229367076419294,       1309.44736842105271535,     -1807.15789473684208133,        1,      5.0219066150400522,     2.05931916730469311,        5.42773815534717308</h2>
