--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>GEOG 370 Projects</h1>
-    <A href="./Worldprojections/worldprojections.html">World Projections</A>
-    <A href="./Georefunc/actuallygeoref.html">UNC Rectified Tile Layer</A>
+    <A href="./Worldprojections/worldprojections.html">Homework 2: World Projections</A>
+    <A href="./Georefunc/actuallygeoref.html">Homework 3: UNC Rectified Tile Layer</A>
+    <A href="./Georefunc/GCPpointshw3.html">Homework 3: GCP Text</A>
 </body>
 </html>
