--- a/githubpracticeexam1/worldprojections.html
+++ b/githubpracticeexam1/worldprojections.html
@@ -14,7 +14,7 @@
     <h2>test</h2>
     <h3>heyyyyyy</h3>
     <a href="./maps/practiceexam1.png">
-    <img src="./maps/practiceexam1.png" alt="WGS84" width='500px'>
+    <img src="./maps/practiceexam1.png" alt="help" width='500px'>
     </a>
     <h2>Aitoff Projection</h2>
     <h3>Some observations</h3>
