--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <A href="./Worldprojections/worldprojections.html">Homework 2: World Projections</A>
     <A href="./Georefunc/actuallygeoref.html">Homework 3: UNC Rectified Tile Layer</A>
     <A href="./Georefunc/GCPpointshw3.html">Homework 3: GCP Text</A>
-    <A href="./tile_beaufortgeoref.html">Homework 3: GCP Text</A>
+    <A href="./tile_beaufortgeoref.html">Homework 4: Georeferenced Images</A>
 </body>
 </html>
