--- a/GCPpointsbeauf.html
+++ b/GCPpointsbeauf.html
@@ -10,15 +10,15 @@
     <h1>They are in the following format: source x, source y, dest. x, dest. y, dX (pixels), dY (pixels), residual (pixels)</h1>
 
     
-    <!-- <h2 style="color:red">Describe in your own words how you displayed the map in different projections using QGIS</h2> -->
-    <!-- <p>Point 1: 4053.57, 2808.97, 2.70063e+06, 362142, -3.62384, 1.95564, 4.11786</p> -->
-    <!-- <p>Point 2: 4906.63, 3326.05, 2.70419e+06, 364497, -1.93696, -1.38544, 2.38144</p> -->
-    <!-- <p>Point 3: 4295.25, 3277.97, 2.7016e+06, 364197, 2.05407, -3.38876, 3.96269</p> -->
-    <!-- <p>Point 4: 4926.93, 2905.15, 2.70437e+06, 362688, 1.56471, 5.02785, 5,2657</p> -->
-    <!-- <p>Point 5: 4944.73, 2415.54. 2.70454e+06, 360647, -0.65135, -2.89311, 2.96552</p> -->
-    <!-- <p>Point 6: 3927.74, 2528.89, 2.70017e+06, 360937, 1.47135, .834442, 1.6915</p> -->
-    <!-- <p>Point 7: 4392.36, 2489.55, 2.70216e+06, 360866, -.103933, -2.98749, 2.9893</p> -->
-    <!-- <p>Point 8:4512.42, 2820,21, 2.70261e+06, 362265, 1.22595, 2.83687, 3.09043</p> -->
+    <h2 style="color:red">Describe in your own words how you displayed the map in different projections using QGIS</h2>
+    <p>Point 1: 4053.57, 2808.97, 2.70063e+06, 362142, -3.62384, 1.95564, 4.11786</p>
+    <p>Point 2: 4906.63, 3326.05, 2.70419e+06, 364497, -1.93696, -1.38544, 2.38144</p>
+    <p>Point 3: 4295.25, 3277.97, 2.7016e+06, 364197, 2.05407, -3.38876, 3.96269</p>
+    <p>Point 4: 4926.93, 2905.15, 2.70437e+06, 362688, 1.56471, 5.02785, 5,2657</p>
+    <p>Point 5: 4944.73, 2415.54. 2.70454e+06, 360647, -0.65135, -2.89311, 2.96552</p>
+    <p>Point 6: 3927.74, 2528.89, 2.70017e+06, 360937, 1.47135, .834442, 1.6915</p>
+    <p>Point 7: 4392.36, 2489.55, 2.70216e+06, 360866, -.103933, -2.98749, 2.9893</p>
+    <p>Point 8:4512.42, 2820,21, 2.70261e+06, 362265, 1.22595, 2.83687, 3.09043</p>
     
     <!-- <h2>WGS84 Projection</h2> -->
     <!-- <h3>This projection preserves shapes and angles, while noticeably distorting area. This makes it best-used for small areas. This projection is standard for GPS, since accurate angles and directon are important for navigational purposes.</h3> -->
