--- a/GCPpointsbeauf.html
+++ b/GCPpointsbeauf.html
@@ -10,7 +10,7 @@
     <h1>They are in the following format: source x, source y, dest. x, dest. y, dX (pixels), dY (pixels), residual (pixels)</h1>
 
     
-    <h2 style="color:red">Describe in your own words how you displayed the map in different projections using QGIS</h2>
+    <!-- <h2 style="color:red">Describe in your own words how you displayed the map in different projections using QGIS</h2> -->
     <p>Point 1: 4053.57, 2808.97, 2.70063e+06, 362142, -3.62384, 1.95564, 4.11786</p>
     <p>Point 2: 4906.63, 3326.05, 2.70419e+06, 364497, -1.93696, -1.38544, 2.38144</p>
     <p>Point 3: 4295.25, 3277.97, 2.7016e+06, 364197, 2.05407, -3.38876, 3.96269</p>
