--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <A href="./Georefunc/actuallygeoref.html">Homework 3: UNC Rectified Tile Layer</A>
     <A href="./Georefunc/GCPpointshw3.html">Homework 3: GCP Text</A>
     <A href="./tile_beaufortgeoref.html">Homework 4: Georeferenced Images</A>
+    <A href="./GCPpointsbeauf.html">Homework 4: GCP Text</A>
+
 </body>
 </html>
