--- a/GCPpointsbeauf.html
+++ b/GCPpointsbeauf.html
@@ -6,7 +6,7 @@
     <title>Projections</title>
 </head>
 <body>
-    <h1>The following are my GCP points for a 1964 georeferenced image of downtown Beeaufort.</h1>
+    <h1>The following are my GCP points for a 1964 georeferenced image of downtown Beaufort.</h1>
     <h1>They are in the following format: source x, source y, dest. x, dest. y, dX (pixels), dY (pixels), residual (pixels)</h1>
 
     
