--- a/webmapunc.html
+++ b/webmapunc.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    The icons show the UNC Bell Tower, Lenoir Dining Hall, and my favorite restaurant, Que Chula. The polygon outlines the Davis Library, where I spent most of my time last year. The vector line represents the shortest path from my apartment to Que Chula. Unfortuntely, the path I drive to get there is bit longer.
+    The icons show the UNC Bell Tower, Lenoir Dining Hall, and my favorite restaurant, Que Chula. The polygon outlines the Davis Library, where I spent most of my time last year. The vector line represents the shortest path from my apartment to Que Chula. Unfortunately, the path I drive to get there is bit longer.
     <div id="mapid"></div>
     <style>
         #mapid{ width: 900px; height: 500px;}
