--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <A href="./Georefunc/GCPpointshw3.html">Homework 3: GCP Text</A>
     <A href="./tile_beaufortgeoref.html">Homework 4: Georeferenced Images</A>
     <A href="./GCPpointsbeauf.html">Homework 4: GCP Text</A>
+    <A href="./webmapunc.html">Homework 5: Web Map</A>
 
 </body>
 </html>
