--- a/tilegeoref2.html
+++ b/tilegeoref2.html
@@ -27,7 +27,7 @@
   <div id="map"></div>
   <script>
       var map = L.map('map').setView([34.71410158601759, -76.66355529710668], 14.0);
-      L.tileLayer('file:////Users/sgparker1701/Downloads/GEOG370/GitHub/GEOG370_Spring2021/Tilesgeoref2/{z}/{x}/{y}.png', {
+      L.tileLayer('./Tilesgeoref2/{z}/{x}/{y}.png', {
         minZoom: 12,
         maxZoom: 16,
         tms: false,
