--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <A href="./GCPpointsbeauf.html">Homework 4: GCP Text</A>
     <A href="./webmapunc.html">Homework 5: Web Map</A>
     <A href="./tile_beaufortgeoref.html">Homework 6: Beaufort Georeferenced Web Map</A>
+    <A href="./GEOG370_homework6.htm">Homework 7: New York Median Income Chloropleth</A>
 
 
 </body>
