--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <A href="./GCPpointsbeauf.html">Homework 4: GCP Text</A>
     <A href="./webmapunc.html">Homework 5: Web Map</A>
     <A href="./tile_beaufortgeoref.html">Homework 6: Beaufort Georeferenced Web Map</A>
-    <A href="./GEOG370_homework6.htm">Homework 7: New York Median Income Chloropleth</A>
-
+    <A href="./GEOG370_homework6/Users/sgparker1701/Downloads/GEOG370/08Section4_Homework8/GEOG370_homework8.htm.htm">Homework 7: New York Median Income Chloropleth</A>
+    <A href="./GEOG370_homework6.htm">Homework 8: New York Women's Median Income as a Percent of Men's</A>
 
 </body>
 </html>
