--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <A href="./GCPpointsbeauf.html">Homework 4: GCP Text</A>
     <A href="./webmapunc.html">Homework 5: Web Map</A>
     <A href="./tile_beaufortgeoref.html">Homework 6: Beaufort Georeferenced Web Map</A>
-    <A href="./GEOG370_homework6.htm">Homework 7: New York Median Income Chloropleth</A>
+    <A href="./GEOG370_homework6.htm">Homework 7: New York Median Income Choropleth</A>
     <A href="./08Section4_Homework8 copy/GEOG370_homework8.htm">Homework 8: New York Women's Median Income as a Percent of Men's</A>
-    <A href="./GEOG370_homework9.htm">Homework 8: New York Women's Median Income as a Percent of Men's</A>
+    <A href="./GEOG370_homework9.htm">Homework 9: Greenhouse Gas Emissions Per Capita By Country Choropleth</A>
 
 
 </body>
