--- a/GEOG370_homework9.htm
+++ b/GEOG370_homework9.htm
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Homework 7: Census data choropleth</h1>
+    <h1>Homework 9: Greenhouse Gas Emissions Per Capita By Country Choropleth</h1>
     <h2>Grace Parker</h2>
-    <h3>My map shows the median income of full-time, year-long workers that are age 16+ in New York by county. The chloropleth categorizes the median incomes by natural breaks. The darker purple shows a greater median income as defined in the legend. The data comes from the US Census, which provides additional data about the median income by gender and industry. I removed this data from the csv file to make the data lighter and faster to view. I cleaned the data in order to join it to the New York counties vector file. I used an attribute query to limit this vector file to only New York counties, since it orginally showed all counties in the U.S.</h3>
+    <h3>This map shows the carbon dioxide emissions per capita by country of the world. This choropleth uses natural breaks that I have tweaked to facilitate reading. The data comes from the World Bank. I cleaned the data to remove unnecessary information, allowing the page to be lighter and faster. When joining the CSV and vector file, I initially had many more null values. I had to edit the country code names to standardize them. For example, the United States code was "USA" in the CSV but "US1" in the vector file. The choropleth shows, as expected a higher per capita emissions in developed Western countries. African nations generally have the lowest per capita emissions. While the US, Australia, and the United Kingdom have among the highest. Nations like China and India, although they have high emissions, also have a large population and therefore do not rank among the highest per capita emissions shown in this map.</h3>
 
     <!-- a png image of your map will be embedded using the lines below  -->
     <a href="./emissionschoropleth.png"> 
