--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <A href="./GEOG370_homework6.htm">Homework 7: New York Median Income Choropleth</A>
     <A href="./08Section4_Homework8 copy/GEOG370_homework8.htm">Homework 8: New York Women's Median Income as a Percent of Men's</A>
     <A href="./GEOG370_homework9.htm">Homework 9: Greenhouse Gas Emissions Per Capita By Country Choropleth</A>
-
+    <A href="./GEOG370_homework10.htm">Homework 10: Geoprocessing</A>
 
 </body>
 </html>
